--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -175,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02n\"}],\"base\":\"stations\",\"main\":{\"temp\":30.16,\"feels_like\":19.29,\"temp_min\":28.4,\"temp_max\":32,\"pressure\":1010,\"humidity\":64},\"visibility\":10000,\"wind\":{\"speed\":10.36,\"deg\":280},\"clouds\":{\"all\":20},\"dt\":1611034804,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1611058105,\"sunset\":1611092479},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":40.62,\"feels_like\":28.38,\"temp_min\":39,\"temp_max\":42.01,\"pressure\":1014,\"humidity\":41},\"visibility\":10000,\"wind\":{\"speed\":12.66,\"deg\":280},\"clouds\":{\"all\":75},\"dt\":1611083453,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1611058105,\"sunset\":1611092479},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
      "execution_count": 10,
@@ -197,21 +197,21 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 803,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02n'}],\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 30.16,\n",
-       "  'feels_like': 19.29,\n",
-       "  'temp_min': 28.4,\n",
-       "  'temp_max': 32,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 64},\n",
+       " 'main': {'temp': 40.62,\n",
+       "  'feels_like': 28.38,\n",
+       "  'temp_min': 39,\n",
+       "  'temp_max': 42.01,\n",
+       "  'pressure': 1014,\n",
+       "  'humidity': 41},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 10.36, 'deg': 280},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1611034804,\n",
+       " 'wind': {'speed': 12.66, 'deg': 280},\n",
+       " 'clouds': {'all': 75},\n",
+       " 'dt': 1611083453,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
@@ -288,21 +288,21 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 803,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02n'}],\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 29.97,\n",
-       "  'feels_like': 19.08,\n",
-       "  'temp_min': 28,\n",
-       "  'temp_max': 32,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 64},\n",
+       " 'main': {'temp': 40.62,\n",
+       "  'feels_like': 28.38,\n",
+       "  'temp_min': 39,\n",
+       "  'temp_max': 42.01,\n",
+       "  'pressure': 1014,\n",
+       "  'humidity': 41},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 10.36, 'deg': 280},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1611035353,\n",
+       " 'wind': {'speed': 12.66, 'deg': 280},\n",
+       " 'clouds': {'all': 75},\n",
+       " 'dt': 1611083453,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
@@ -390,7 +390,7 @@
     {
      "data": {
       "text/plain": [
-       "1611035353"
+       "1611083453"
       ]
      },
      "execution_count": 18,
@@ -411,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 32 64 20 10.36\n"
+      "42.3584 -71.0598 42.01 41 75 12.66\n"
      ]
     }
    ],
@@ -427,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2021-01-19 05:49:13'"
+       "'2021-01-19 19:10:53'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,6 +448,79 @@
     "date = boston_data[\"dt\"]\n",
     "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
     "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1611083788.0873675"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = time.strftime(\"%x\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-5734c8a754b4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Build the scatter plot for latitude vs. max temperature.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m plt.scatter(lats,\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mmax_temps\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0medgecolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"black\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlinewidths\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"o\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Import time module\n",
+    "import time\n",
+    "\n",
+    "# Build the scatter plot for latitude vs. max temperature.\n",
+    "plt.scatter(lats,\n",
+    "            max_temps,\n",
+    "            edgecolor=\"black\", linewidths=1, marker=\"o\",\n",
+    "            alpha=0.8, label=\"Cities\")\n",
+    "\n",
+    "# Incorporate the other graph properties.\n",
+    "plt.title(f\"City Latitude vs. Max Temperature \"+ time.strftime(\"%x\"))\n",
+    "plt.ylabel(\"Max Temperature (F)\")\n",
+    "plt.xlabel(\"Latitude\")\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# Save the figure.\n",
+    "plt.savefig(\"weather_data/Fig1.png\")\n",
+    "\n",
+    "# Show plot.\n",
+    "plt.show()"
    ]
   }
  ],
